up to the frontend

--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "server" : "nodemon app.js",
-    "start" : "node app.js"
+    "server": "nodemon app.js",
+    "server:debug": "nodemon --inspect app.js",
+    "start": "node app.js",
+    "frontend-install": "npm install --prefix frontend",
+    "frontend": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run frontend\""
   },
   "author": "",
   "license": "ISC",
